# AIRuntime

./: CHANGELOG.md  Cargo.toml  README.md
airuntime/: Cargo.toml
airuntime/onnx/: onnx.proto
airuntime/src/: device.rs  lib.rs  loader.rs  pipline.rs  value.rs
airuntime/src/loader/: transform.rs
airuntime/src/prost/: onnx.rs
api/: Cargo.toml  build.rs  cbindgen.toml
api/sample/: CMakeLists.txt  main.cc
api/src/: lib.rs
bridge/: Cargo.toml  build.rs
bridge/cxx/: CMakeLists.txt
bridge/cxx/include/: nndevice.h
bridge/cxx/src/: nndevice.cc
bridge/src/: lib.rs  nndevice.rs
bridge/src/nndevice/: engine.rs  ffi.rs
derive/: Cargo.toml
derive/src/: code.rs  lib.rs
model/: Cargo.toml
model/src/: attribute.rs  data.rs  graph.rs  lib.rs  operator.rs  tensor.rs
samples/: Cargo.toml
