[package]
name = "airuntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
memmap2.workspace = true
prost.workspace = true
log.workspace = true
ndarray.workspace = true
model = {path = "../model",version="0.1.0"}
bridge = {path = "../bridge",version="0.1.0"}


